--- a/contact-me.html
+++ b/contact-me.html
@@ -7,8 +7,8 @@
   <body>
     <h1>My contact details</h1>
     <p>Puebla, MX</p>
-    <p>+52 2221487247</p>
-    <p>arturolof@gmail.com</p>
+    <p>+52 22214872</p>
+    <p>arturolof222@gmail.com</p>
     <hr>
     <form class="" action="mailto:info@alfindustries.com" method="post" enctype="text/plain">
       <label>Your Name</label>
